--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -17,9 +17,9 @@ jobs:
         id: pragent
         uses: qodo-ai/pr-agent@main
         env:
-          GITHUB_ACTION.AUTO_REVIEW: "true"
-          GITHUB_ACTION.AUTO_IMPROVE: "true"
-          GITHUB_ACTION.AUTO_DESCRIBE: "true"
+          GITHUB_ACTION_CONFIG.AUTO_REVIEW: "true"
+          GITHUB_ACTION_CONFIG.AUTO_IMPROVE: "true"
+          GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: "true"
           AZURE_API_KEY: ${{ secrets.AZURE_API_KEY }}
           
           OPENAI_API_VERSION: ${{ secrets.OPENAI_API_VERSION }}
