--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -20,9 +20,10 @@ jobs:
           GITHUB_ACTION_CONFIG.AUTO_REVIEW: "true"
           GITHUB_ACTION_CONFIG.AUTO_IMPROVE: "true"
           GITHUB_ACTION_CONFIG.AUTO_DESCRIBE: "true"
-          AZURE_API_KEY: ${{ secrets.AZURE_API_KEY }}
+
           OPENAI_API_TYPE: "azure"
-          
+          AZURE_API_KEY: ${{ secrets.AZURE_API_KEY }}
+          OPENAI_KEY: ${{ secrets.AZURE_API_KEY }}
           OPENAI_API_VERSION: ${{ secrets.OPENAI_API_VERSION }}
           OPENAI_API_BASE: ${{ secrets.OPENAI_API_BASE }}
           OPENAI_DEPLOYMENT_ID: ${{ secrets.OPENAI_DEPLOYMENT_ID }}
